--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,15 @@ footer {
     height: 100%;
     background-color: black;
     color: green;
+    padding: 0 1.5rem;
 }
 
 .swiper {
     width: 100%;
     height: 100%;
+    overflow: hidden !important;
 }
+
 
 .swiper-slide {
     text-align: center;
@@ -705,4 +708,112 @@ html {
     .premier {
         width: 100%;
     }
+}
+
+@media(max-width: 600px) {
+    .wrapper__end-list {
+        column-gap: 1rem;
+    }
+
+    .header__title {
+        font-size: 6rem;
+    }
+
+    .reg__title {
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+
+    .premier__day img {
+        display: flex;
+        width: 75%;
+        margin: 0 auto;
+    }
+}
+
+
+@media(max-width: 500px) {
+    .mySwiper .swiper-button-next {
+        top: 20rem;
+    }
+
+    .header__button {
+        padding: 1.5rem 2rem;
+    }
+
+    .mySwiper .swiper-button-prev {
+        top: 20rem;
+    }
+
+    .mySwiper2 .swiper-button-prev {
+        display: none;
+    }
+
+    .mySwiper2 .swiper-button-next {
+        display: none;
+    }
+
+    .wrapper__list {
+        display: none;
+    }
+
+    .wrapper__end-list {
+        column-gap: 3rem;
+    }
+
+    .premier {
+        border-radius: 0;
+    }
+
+    .reg__title {
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+    }
+
+    .header__left {
+        margin-top: 7.5rem !important;
+    }
+
+    .header__title {
+        font-size: 5rem;
+    }
+}
+
+.aside__link {
+    font-size: 1.6rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 0;
+    transition: .3s;
+    color: white;
+}
+
+.aside__logo {
+    width: 100px;
+    margin: 0 auto;
+}
+
+aside .logo {
+    width: 100px;
+    padding-top: 1rem;
+}
+
+.aside__link:hover {
+    color: #26FFF2;
+}
+
+aside {
+    background: #000;
+    z-index: 10;
+    position: absolute;
+    width: 100%;
+    transition: .3s;
+    transform: translateY(-1000%);
+    top: 7rem;
+}
+
+nav .logo {
+    cursor: pointer;
 }
